fixed overflow of leadership grid on ipad portrait size

--- a/wp-content/themes/ameris-bank/sass/components/pages/_leadership.scss
+++ b/wp-content/themes/ameris-bank/sass/components/pages/_leadership.scss
@@ -106,6 +106,10 @@
 // Thumbnail grid with expandable content
 // Also used for Lending Experts
 
+.og-grid-container {
+	overflow:hidden;
+}
+
 .og-grid {
 	margin:0;
 	position:relative;
